// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationCard renders Alert inside the component when there is an error loading documents 1`] = `"An error was encountered while checking your application for documents. If this continues to happen, call the Paid Family Leave Contact Center at (833) 344‑7365."`;

exports[`ApplicationCard renders EIN 1`] = `
<div
  className="border-bottom border-base-lighter margin-bottom-2"
>
  <Heading
    className="margin-top-0 margin-bottom-05 text-base-dark"
    level="4"
    size="6"
  >
    Employer EIN
  </Heading>
  <p
    className="margin-top-0 margin-bottom-2 font-body-2xs text-medium"
  >
    12-3456789
  </p>
</div>
`;

exports[`ApplicationCard renders Intermittent leave period date range 1`] = `
<div>
  <Heading
    className="margin-top-0 margin-bottom-05 text-base-dark"
    level="4"
    size="6"
  >
    Intermittent leave
  </Heading>
  <p
    className="margin-top-0 margin-bottom-2 font-body-2xs text-medium"
  >
    2/1/2021 – 7/1/2021
  </p>
</div>
`;

exports[`ApplicationCard renders continuous and reduced schedule leave period date ranges 1`] = `
<div>
  <Heading
    className="margin-top-0 margin-bottom-05 text-base-dark"
    level="4"
    size="6"
  >
    Continuous leave
  </Heading>
  <p
    className="margin-top-0 margin-bottom-2 font-body-2xs text-medium"
  >
    1/1/2021 – 6/1/2021
  </p>
  <Heading
    className="margin-top-0 margin-bottom-05 text-base-dark"
    level="4"
    size="6"
  >
    Reduced leave schedule
  </Heading>
  <p
    className="margin-top-0 margin-bottom-2 font-body-2xs text-medium"
  >
    2/1/2021 – 7/1/2021
  </p>
</div>
`;

exports[`ApplicationCard uses generic text as the main heading 1`] = `
<header
  className="bg-base-lightest padding-3"
>
  <Heading
    className="margin-bottom-05"
    level="2"
  >
    Application 2
  </Heading>
</header>
`;

exports[`ApplicationCard when the claim status is Completed includes a button to upload additional documents 1`] = `
<ButtonLink
  className="display-block"
  href="/applications/upload-docs-options?claim_id=mock_application_id"
  variation={null}
>
  Upload additional documents
</ButtonLink>
`;

exports[`ApplicationCard when the claim status is Completed renders instructions about reductions 1`] = `
Array [
  "If you’ll receive ",
  <a
    href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
    key="1"
  >
    other benefits or income
  </a>,
  ", call the Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="3"
  >
    (833) 344‑7365
  </a>,
  ". This includes:",
]
`;

exports[`ApplicationCard when the claim status is Completed renders instructions about reductions 2`] = `
<ul
  className="usa-list"
>
  <li>
    Any benefits from your employer that you’ll be using in addition to Massachusetts paid leave (for example, maternity leave, or paid sick time)
  </li>
  <li>
    Income from any other sources during your leave
  </li>
</ul>
`;

exports[`ApplicationCard when the claim status is Submitted includes a link to complete the claim 1`] = `
<ButtonLink
  className="display-block margin-top-2"
  data-test="resume-button"
  href="/applications/checklist?claim_id=mock_application_id"
>
  Continue application
</ButtonLink>
`;

exports[`ApplicationCard when the claim status is Submitted renders legal notices text 1`] = `
<div
  className="border-bottom border-base-lighter padding-bottom-2 margin-bottom-2"
  data-test="legal-notices"
>
  <Heading
    level="3"
    weight="normal"
  >
    Download your notices
  </Heading>
  <p>
    Once we’ve made a decision, you can download the decision notice here. You’ll also get an email notification.
  </p>
</div>
`;

exports[`ApplicationCard when the claim status is Submitted uses the Case ID as the main heading and includes leave reason 1`] = `
<header
  className="bg-base-lightest padding-3"
>
  <Heading
    className="margin-bottom-1"
    level="2"
  >
    NTN-111-ABS-01
  </Heading>
  <Heading
    className="margin-top-0"
    level="3"
    size="2"
    weight="normal"
  >
    Medical leave
  </Heading>
</header>
`;

exports[`ApplicationCard when there are legal notices displays legal notices and explains that notices download to the device 1`] = `
<p>
  When you click the notice link, the file will download to your device.
</p>
`;

exports[`ApplicationCard when there are legal notices displays legal notices and explains that notices download to the device 2`] = `
<li
  className="font-body-2xs"
  key="mock-document-3"
>
  <a
    className="text-medium"
    href=""
    onClick={[Function]}
  >
    Approval notice (PDF)
  </a>
  <div
    className="text-base-dark"
  >
    Posted 1/1/2021
  </div>
</li>
`;

exports[`ApplicationCard when there are legal notices displays legal notices and explains that notices download to the device 3`] = `
<li
  className="font-body-2xs"
  key="mock-document-4"
>
  <a
    className="text-medium"
    href=""
    onClick={[Function]}
  >
    Denial notice
  </a>
  <div
    className="text-base-dark"
  >
    Posted 1/1/2021
  </div>
</li>
`;

exports[`ApplicationCard when there are legal notices displays legal notices and explains that notices download to the device 4`] = `
<li
  className="font-body-2xs"
  key="mock-document-5"
>
  <a
    className="text-medium"
    href=""
    onClick={[Function]}
  >
    Request for more information (PDF)
  </a>
  <div
    className="text-base-dark"
  >
    Posted 1/1/2021
  </div>
</li>
`;

exports[`ApplicationCard when there is a denial notice includes a button to upload additional documents 1`] = `
<ButtonLink
  className="display-block"
  href="/applications/upload-docs-options?claim_id=mock_application_id"
  variation={null}
>
  Upload additional documents
</ButtonLink>
`;
